--- a/modal_sound/src/tools/CMakeLists.txt
+++ b/modal_sound/src/tools/CMakeLists.txt
@@ -4,6 +4,6 @@ add_executable(extmat
     ../deformable/stvk.h           ../deformable/stvk.cpp
     ../generic/precision_type.hpp  ../generic/precision_type.cpp)
 target_link_libraries(extmat
-    ${MKL_LIBS} -liomp5 ${CMAKE_THREAD_LIBS_INIT})
+    ${MKL_LIBS} ${MKL_LIBRARY} -liomp5 ${CMAKE_THREAD_LIBS_INIT})
 set_target_properties(extmat 
     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
